<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Vox Libri</string>
    <string name="main_menu_prefs">Preferences</string>
    <string name="main_menu_library">Library</string>
    <string name="main_menu_bookmarks">Bookmarks</string>
    <string name="main_menu_chapters">Chapters</string>
    <string name="library_menu_add">Add Book</string>
    <string name="library_context_menu_open">Open</string>
    <string name="library_context_menu_delete">Delete</string>
    <string name="bookmarks_seconds"> sec.</string>
    <string name="bookmarks_menu_remove_all">Remove All</string>
    <string name="bookmarks_context_menu_open">Open</string>
    <string name="bookmarks_context_menu_delete">Delete</string>
    <string name="bookmarks_context_menu_rename">Rename</string>
    <string name="main_menu_about">About</string>
    <string name="chapters_context_menu_open">Open</string>
    <string name="db_open_error">Cannot open application database</string>
    <string name="library_selected_book_title">Selected book</string>
    <string name="library_book_added">New book added</string>
    <string name="library_book_add_error">Unable to add the book</string>
    <string name="library_book_adding_wait">Adding book. Please wait...</string>
    <string name="playback_failed">Error opening media file</string>
    <string name="error_opening_library">Error opening library</string>
</resources>
